--- a/po/s63_pi_pl_PL.po
+++ b/po/s63_pi_pl_PL.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: s63_pi 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-24 20:12-0400\n"
+"POT-Creation-Date: 2014-05-02 23:08-0400\n"
 "PO-Revision-Date: 2014-04-03 22:36+0100\n"
 "Last-Translator: mrm <mrm@wp.pl>\n"
 "Language-Team: PL <mrm@wp.pl>\n"
@@ -121,6 +121,9 @@ msgstr ""
 msgid "PUB files (*.PUB)|*.PUB|txt files (*.txt)|*.txt|All files (*.*)|*.*"
 msgstr ""
 "Pliki PUB (*.PUB)|*.PUB|Pliki TXT (*.txt)|*.txt|Wszystkie pliki (*.*)|*.*"
+#
+msgid "Please enter valid Userpermit and Installpermit on Keys/Permits tab"
+msgstr ""
 #
 msgid "Remove Permits"
 msgstr "Usuwanie zezwoleń"
@@ -324,16 +327,20 @@ msgid "s63_pi Message"
 msgstr ""
 #
 #
+#
 #~ msgid "Create eSENCs on Import?\n"
 #~ msgstr "Wygenerować pliki eSENC przy imporcie?\n"
+#
 #
 #
 #~ msgid "Invalid cell permit starts with "
 #~ msgstr "Niepoprawne Zezwolenie Komórki rozpoczyna się od "
 #
 #
+#
 #~ msgid "Note:\n"
 #~ msgstr "Zauważ:\n"
+#
 #
 #
 #~ msgid ""
@@ -342,6 +349,7 @@ msgstr ""
 #~ msgstr ""
 #~ "OpenCPN może generować pliki eSENC podczas importu komórek.\n"
 #~ "\n"
+#
 #
 #
 #~ msgid ""
@@ -354,13 +362,16 @@ msgstr ""
 #~ "SSE 08 - zły format danych pliku Certyfikatu SA.\n"
 #
 #
+#
 #~ msgid "The process may be Cancelled by the user at any time.\n"
 #~ msgstr ""
 #~ "Ta czynność może być anulowana przez użytkownika w dowolnej chwili.\n"
 #
 #
+#
 #~ msgid "This process may take some time.\n"
 #~ msgstr "To może chwilę potrwać.\n"
+#
 #
 #
 #~ msgid ""
@@ -370,6 +381,7 @@ msgstr ""
 #~ "Jeszcze nie przetworzone pliki eSENC zostaną wygenerowane przez OpenCPN w "
 #~ "miarę potrzeb.\n"
 #~ "\n"
+#
 #
 #
 #~ msgid ""
