--- a/po/s63_pi_et_ET.po
+++ b/po/s63_pi_et_ET.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: s63_pi 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-02 23:08-0400\n"
+"POT-Creation-Date: 2014-05-04 22:52-0400\n"
 "PO-Revision-Date: 2014-04-04 18:51+0200\n"
 "Last-Translator: Highlander <highlander.et@gmail.com>\n"
 "Language-Team:  <open_en_et@googlegroups.com>\n"
@@ -43,7 +43,7 @@ msgid "Certificate Name"
 msgstr "Sertifikaadi nimi"
 #
 #, fuzzy
-msgid "Charts"
+msgid "Chart Cells"
 msgstr "S63 kaardid"
 #
 msgid "Creating eSenc"
@@ -327,8 +327,10 @@ msgstr ""
 #
 #
 #
+#
 #~ msgid "Create eSENCs on Import?\n"
 #~ msgstr "Loo importimisel eSENC'id?\n"
+#
 #
 #
 #
@@ -337,8 +339,10 @@ msgstr ""
 #
 #
 #
+#
 #~ msgid "Note:\n"
 #~ msgstr "Märkus:\n"
+#
 #
 #
 #
@@ -346,6 +350,7 @@ msgstr ""
 #~ "OpenCPN can create eSENC files as cells are imported.\n"
 #~ "\n"
 #~ msgstr "OpenCPN võib ruutude importimise ajal luua eSENC-faile.\n"
+#
 #
 #
 #
@@ -360,13 +365,16 @@ msgstr ""
 #
 #
 #
+#
 #~ msgid "The process may be Cancelled by the user at any time.\n"
 #~ msgstr "Kasutaja võib protsessi igal ajal katkestada.\n"
 #
 #
 #
+#
 #~ msgid "This process may take some time.\n"
 #~ msgstr "See protsees võib natuke aega võtta.\n"
+#
 #
 #
 #
@@ -376,6 +384,7 @@ msgstr ""
 #~ msgstr ""
 #~ "Veel loomata eSENC luuakse OpenCPN'i poolt vajaduse tekkimisel.\n"
 #~ "\n"
+#
 #
 #
 #
