--- a/po/s63_pi.pot
+++ b/po/s63_pi.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: s63_pi 0.6.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-02 23:08-0400\n"
+"POT-Creation-Date: 2014-05-04 22:52-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,7 +37,7 @@ msgid "S63 Charts"
 msgstr ""
 
 #: src/s63_pi.cpp:310
-msgid "Charts"
+msgid "Chart Cells"
 msgstr ""
 
 #: src/s63_pi.cpp:321
