--- a/po/s63_pi_fr_FR.po
+++ b/po/s63_pi_fr_FR.po
@@ -7,9 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenCPN Plugin S63\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-02 23:08-0400\n"
-"PO-Revision-Date: 2014-04-03 12:45+0100\n"
-"Last-Translator: Gilletarom <contact@gilletarom.fr>\n"
+"POT-Creation-Date: 2014-05-04 22:52-0400\n"
+"PO-Revision-Date: 2014-05-01 23:18+0100\n"
+"Last-Translator: Gilletarom et  EdelVoilier <contact@gilletarom.fr et  "
+"pascaljouin74@gmail.com>\n"
 "Language-Team: Gilletarom <contact@gilletarom.fr>\n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +24,7 @@ msgstr "   Erreur : Création impossible "
 #
 #, c-format
 msgid "Attempted update: %d\n"
-msgstr ""
+msgstr "Mise à jour tentée : %d\n"
 #
 msgid "Cancel"
 msgstr "Annuler"
@@ -44,8 +45,8 @@ msgid "Certificate Name"
 msgstr "Nom du certificat"
 #
 #, fuzzy
-msgid "Charts"
-msgstr "Cartes S 63"
+msgid "Chart Cells"
+msgstr "Cartes"
 #
 msgid "Creating eSenc"
 msgstr "eSenc en cours de création"
@@ -93,13 +94,12 @@ msgstr "Permis de cellules S63 installés"
 msgid "Installed S63 Certificates/Keys"
 msgstr "Certificats/Clés S63 installés"
 #
-#, fuzzy
 msgid "Keys/Permits"
-msgstr "UserPermit"
+msgstr "Clés/Permis"
 #
 #, c-format
 msgid "Latest intalled update: %d\n"
-msgstr ""
+msgstr "Dernière mise à jour installée : %d\n"
 #
 msgid "New Installpermit..."
 msgstr "Nouveau InstallPermit ...."
@@ -119,6 +119,14 @@ msgid ""
 "\n"
 "Create eSENCs on Import?\n"
 msgstr ""
+"OpenCPN peut créer des fichiers eSENC pour les cellules importées.\n"
+"\n"
+"Note: \n"
+"Ce processus peut prendre un certain temps.\n"
+"Les eSENCS qui ne sont pas traités ici seront créés selon les besoins par "
+"OpenCPN.\n"
+"\n"
+"Voulez vous créer les fichiers eSENC dés maintenant ?\n"
 #
 msgid "PUB files (*.PUB)|*.PUB|txt files (*.txt)|*.txt|All files (*.*)|*.*"
 msgstr "Fichiers PUB (*.PUB)|*.PUB|txt files (*.txt)|*.txt|All files (*.*)|*.*"
@@ -149,15 +157,14 @@ msgstr ""
 "fournit un support pour l'affichage des cartes S63\n"
 "\n"
 #
-#, fuzzy
 msgid "S63_pi Install Permit Required"
-msgstr "InstallPermit invalide"
+msgstr "L'InstallPermit pour le complément S63 est requis"
 #
 msgid "S63_pi Log"
 msgstr "Log du fonctionnement du complément S63"
 #
 msgid "S63_pi Userpermit Required"
-msgstr ""
+msgstr "Le UserPermit pour le complément S63 est requis"
 #
 msgid "S63_pi backchannel could not listen at the specified port !\n"
 msgstr ""
@@ -206,8 +213,16 @@ msgid ""
 "\n"
 "Cell name: "
 msgstr ""
+"Erreur système de sécurité \n"
+"\n"
+" SSE 06 - Le certificat du serveur Data SA Signé n'est pas valide. \n"
+"La SA peut proposer une nouvelle clé publique ou l'ENC peut provenir d'un "
+"autre service. \n"
+"Une nouvelle clé publique SA peut être obtenue sur le site Web de l'OHI ou de "
+"votre fournisseur de données.\n"
+"\n"
+"Nom de la cellule :"
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -215,10 +230,12 @@ msgid ""
 "A valid certificate can be obtained from the IHO website or your data "
 "supplier.\n"
 msgstr ""
-"Un certificat valide peut être obtenu sur le site web de l'IHO ou auprès de "
-"votre fournisseur de données.\n"
+"Erreur système de sécurité \n"
+"\n"
+" SSE 08 - Le format du fichier du certificat numérique SA est incorrect \n"
+".Un certificat valide peut être obtenue sur le site Web de l'OHI ou par votre "
+"fournisseur de données. \n"
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -227,10 +244,10 @@ msgid ""
 msgstr ""
 "Erreur système de sécurité \n"
 "\n"
-" SSE24 - Format invalide de la signature de l'ENC.\n"
+" SSE 09 - La signature de l'ENC est invalide.\n"
 "\n"
+"Nom de la cellule : "
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -238,9 +255,8 @@ msgid ""
 msgstr ""
 "Erreur système de sécurité \n"
 "\n"
-" SSE13 - Le Permis de la cellule est invalide (Erreur de checksum)\n"
+" SSE11 - Le Permis de la cellule est absent"
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -250,10 +266,9 @@ msgid ""
 msgstr ""
 "Erreur système de sécurité \n"
 "\n"
-" SSE24 - Format invalide de la signature de l'ENC.\n"
-"\n"
+" SSE 12 - Format invalide du permis de la cellule.n\n"
+"La ligne du permis de la cellule commence par "
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -265,8 +280,10 @@ msgstr ""
 "Erreur système de sécurité \n"
 "\n"
 " SSE13 - Le Permis de la cellule est invalide (Erreur de checksum)\n"
+"ou le permis de la cellule est destiné à un autre système informatique.\n"
+"\n"
+"Le permis invalide de la cellule commence par "
 #
-#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
@@ -276,8 +293,9 @@ msgid ""
 msgstr ""
 "Erreur système de sécurité \n"
 "\n"
-" SSE24 - Format invalide de la signature de l'ENC.\n"
+" SSE 24 - Format invalide de la signature de l'ENC.\n"
 "\n"
+"Nom de la cellule : "
 #
 msgid ""
 "Security Scheme Warning\n"
@@ -286,6 +304,11 @@ msgid ""
 "\n"
 "Cell name: "
 msgstr ""
+"Erreur système de sécurité \n"
+"\n"
+" SSE 26-. L'ENC n'est pas authentifié par l'OHI agissant en tant que SA. \n"
+"\n"
+"Nom de la cellule : "
 #
 msgid "Select PERMIT.TXT File"
 msgstr "Sélectionnez un fichier PERMIT.TXT"
@@ -328,38 +351,25 @@ msgid "Userpermit invalid"
 msgstr "UserPermit invalide"
 #
 msgid "cell:"
-msgstr ""
+msgstr "Cellule :"
 #
-#, fuzzy
 msgid "s63_pi Message"
 msgstr "Message du complément S63_pi"
-#
-#
 #
 #~ msgid " mag"
 #~ msgstr " magnét."
 #
-#
-#
 #~ msgid "Cannot find ENC_ROOT directory"
 #~ msgstr "Impossible de trouver le dossier ENC_ROOT"
-#
-#
 #
 #~ msgid "Create eSENCs on Import?\n"
 #~ msgstr "Créer les eSENCs lors de l'importation ?\n"
 #
-#
-#
 #~ msgid "Invalid cell permit starts with "
 #~ msgstr "Permis de cellule invalide commençant par "
 #
-#
-#
 #~ msgid "Note:\n"
 #~ msgstr "Note :\n"
-#
-#
 #
 #~ msgid ""
 #~ "OpenCPN can create eSENC files as cells are imported.\n"
@@ -368,8 +378,6 @@ msgstr "Message du complément S63_pi"
 #~ "OpenCPN peut créer un fichier eSENC  pour autant que des cellules soient "
 #~ "importées\n"
 #~ "\n"
-#
-#
 #
 #~ msgid ""
 #~ "S63 PlugIn for OpenCPN\n"
@@ -384,8 +392,6 @@ msgstr "Message du complément S63_pi"
 #~ "Les cartes supportées doivent avoir été installées au préalable\n"
 #~ "Le certificat de décodage doit être en place.\n"
 #
-#
-#
 #~ msgid ""
 #~ "Security Scheme Error\n"
 #~ "\n"
@@ -395,17 +401,11 @@ msgstr "Message du complément S63_pi"
 #~ "\n"
 #~ " SS08 - Format incorrect du fichier du certificat SA Digital\n"
 #
-#
-#
 #~ msgid "The process may be Cancelled by the user at any time.\n"
 #~ msgstr "Le processus peut être annulé par l'utilisateur à tout moment.\n"
 #
-#
-#
 #~ msgid "This process may take some time.\n"
 #~ msgstr "Le processus peut prendre un certain temps.\n"
-#
-#
 #
 #~ msgid ""
 #~ "eSENCS not yet processed will be created as needed by OpenCPN.\n"
@@ -413,8 +413,6 @@ msgstr "Message du complément S63_pi"
 #~ msgstr ""
 #~ "Les eSENCS non encore traitées seront créés selon les besoins par "
 #~ "OpenCPN.\n"
-#
-#
 #
 #~ msgid ""
 #~ "or the Cell Permit is for a different system.\n"
